# Rust_Projects

./: ll
Api-calls/: Cargo.toml
Api-calls/src/: main.rs
async-await/: Cargo.toml
async-await/src/: main.rs
auth/: Cargo.toml
auth/src/: main.rs
compress_youtube/: Cargo.toml  compressed_file
compress_youtube/src/: main.rs
extract-links/: Cargo.toml
extract-links/src/: main.rs
get-request/: Cargo.toml
get-request/src/: main.rs
image-download/: Cargo.toml
image-download/src/: main.rs
pass-vault/: Cargo.toml  passwords.json
pass-vault-sqlite/: Cargo.toml  passwords.db
pass-vault-sqlite/src/: main.rs
pass-vault/src/: main.rs  pentry.rs
read-csv/: Cargo.toml
read-csv/src/: main.rs
read-json/: Cargo.toml
read-json/src/: main.rs
rust-sqlite/: Cargo.toml  sqlite.db
rust-sqlite/src/: main.rs
rust_decompress/: Cargo.toml
rust_decompress/src/: main.rs
write-json/: Cargo.toml
write-json/src/: main.rs
