[package]
name = "pass-vault-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version = "1.0" , features = ["derive"]}
serde_json="1.0"
rusqlite={version = "0.31.0" ,  features = ["bundled"]} #bundled uses a bundled version of SQLite. This is a good option for cases where linking to SQLite is complicated, such as Windows.